parallel-run-mirroring/tax-service/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax-service
  labels:
    app: tax-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tax-service
  template:
    metadata:
      labels:
        app: tax-service
    spec:
      containers:
        - name: tax-service
          image: learncloudnative/tax-service:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: tax-service
spec:
  selector:
    app: tax-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
